fix: overflow y...

--- a/src/app/(Home)/layout.module.scss
+++ b/src/app/(Home)/layout.module.scss
@@ -7,8 +7,8 @@
   max-width: 100%;
   height: 100%;
   background-color: transparent;
-  overflow-y: hidden;
+  overflow-x: hidden;
   main {
-    overflow-y: hidden;
+    overflow-x: hidden;
   }
 }
