--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -57,7 +57,7 @@ body {
 
 body,
 html {
-  overflow-y: hidden;
+  overflow-x: hidden;
   height: 100%;
   margin: 0;
   font-family: CoinbaseSans, -apple-system, BlinkMacSystemFont, 'Segoe UI',
